--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "dev": "nodemon --watch * --exec \"electron .\" --enable-logging"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "^33.2.1"
+    "electron": "^33.2.1",
+    "electron-reloader": "^1.2.3",
+    "nodemon": "^3.0.2"
   }
 }
