--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "dev": "electron . --debug"
+    "dev": "nodemon --watch * --exec \"electron .\"",
+    "dev-reload": "electron . --dev-reload"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "electron": "^28.0.0"
+    "electron": "^28.0.0",
+    "electron-reloader": "^1.2.3",
+    "nodemon": "^3.1.9"
   }
 }
