--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "electron": "^28.0.0",
     "electron-reloader": "^1.2.3",
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2"
   }
 }
