--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
-    "dev": "nodemon --watch * --exec \"electron .\"",
-    "dev-reload": "electron . --dev-reload",
+    "start": "npx electron .",
+    "dev": "nodemon --watch * --exec \"npx electron .\"",
+    "dev-reload": "npx electron . --dev-reload",
     "build": "electron-builder",
     "publish": "electron-builder -p always"
   },
@@ -18,13 +18,12 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.3",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "electron-updater": "^6.3.9",
+    "electron-updater": "^6.1.7",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "simple-git": "^3.27.0"
+    "jspdf": "^2.5.1"
   },
   "build": {
     "appId": "com.scobro.printphotoapp",
@@ -38,7 +37,9 @@
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
-      "shortcutName": "PrintPhotoApp"
+      "shortcutName": "PrintPhotoApp",
+      "perMachine": true,
+      "deleteAppDataOnUninstall": false
     }
   }
 }
