--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "electron-updater": "^6.1.7",
+    "dotenv": "^16.4.7",
+    "electron-updater": "^6.3.9",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1"
   },
