--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "dev": "nodemon --watch * --exec \"npx electron .\"",
     "dev-reload": "npx electron . --dev-reload",
     "build": "electron-builder",
-    "publish": "electron-builder -p always"
+    "publish": "node -e \"require('dotenv').config(); process.env.GH_TOKEN = process.env.GITHUB_REPO_KEY; require('child_process').execSync('electron-builder -p always', {stdio: 'inherit'});\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ScottBruton/PrintPhotoApp.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "electron": "^28.0.0",
     "electron-builder": "^24.13.3",
     "electron-reloader": "^1.2.3",
@@ -22,6 +27,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "electron-log": "^5.2.4",
     "electron-updater": "^6.3.9",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1"
@@ -30,14 +36,7 @@
     "appId": "com.scobro.printphotoapp",
     "productName": "PrintPhotoApp",
     "files": [
-      "**/*",
-      "UpdateScript.ps1"
-    ],
-    "extraResources": [
-      {
-        "from": "UpdateScript.ps1",
-        "to": "UpdateScript.ps1"
-      }
+      "**/*"
     ],
     "win": {
       "target": "nsis",
@@ -51,6 +50,12 @@
       "shortcutName": "PrintPhotoApp",
       "perMachine": true,
       "deleteAppDataOnUninstall": false
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "ScottBruton",
+      "repo": "PrintPhotoApp",
+      "private": true
     }
   }
 }
