--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --watch * --exec \"npx electron .\"",
     "dev-reload": "npx electron . --dev-reload",
     "build": "electron-builder",
-    "publish": "node -e \"require('dotenv').config(); process.env.GH_TOKEN = process.env.GITHUB_REPO_KEY; require('child_process').execSync('electron-builder -p always', {stdio: 'inherit'});\""
+    "publish": "node -e \"require('dotenv').config(); process.env.GH_TOKEN = process.env.GITHUB_REPO_KEY; process.env.USE_HARD_LINKS = 'false'; require('child_process').execSync('electron-builder -p always --win portable', {stdio: 'inherit'});\""
   },
   "repository": {
     "type": "git",
@@ -33,14 +33,24 @@
     "jspdf": "^2.5.1"
   },
   "build": {
-    "appId": "com.scobro.printphotoapp",
+    "appId": "com.scottbruton.printphotoapp",
     "productName": "PrintPhotoApp",
+    "artifactName": "${productName}-Setup-${version}.exe",
+    "asar": true,
+    "forceCodeSigning": false,
     "files": [
       "**/*"
     ],
     "win": {
       "target": "nsis",
-      "icon": "asset/scoBroPrints.ico"
+      "icon": "asset/scoBroPrints.ico",
+      "signAndEditExecutable": false,
+      "publish": {
+        "provider": "github",
+        "owner": "ScottBruton",
+        "repo": "PrintPhotoApp",
+        "private": true
+      }
     },
     "nsis": {
       "oneClick": false,
