--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "A photo printing application",
   "devDependencies": {
     "cross-env": "^7.0.3",
     "electron": "^28.0.0",
@@ -44,12 +44,7 @@
       "target": "nsis",
       "icon": "asset/scoBroPrints.ico",
       "signAndEditExecutable": false,
-      "publish": {
-        "provider": "github",
-        "owner": "ScottBruton",
-        "repo": "PrintPhotoApp",
-        "private": true
-      }
+      "publish": ["github"]
     },
     "nsis": {
       "oneClick": false,
@@ -60,11 +55,7 @@
       "perMachine": true,
       "deleteAppDataOnUninstall": false
     },
-    "publish": {
-      "provider": "github",
-      "owner": "ScottBruton",
-      "repo": "PrintPhotoApp",
-      "private": true
-    }
+    "publish": ["github"],
+    "generateUpdatesFilesForAllChannels": true
   }
 }
