--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,12 @@ yarn-error.log*
 package-lock.json
 yarn.lock
 
+# Build artifacts
+build/
+*.log
 repoToken.txt
+cert.pfx
+cert_base64.txt
 # Runtime data
 pids
 *.pid
